<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_screen_logo"
        style="@style/TaskerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_logo_top_margin"
        android:text="@string/tasker_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_screen_hello"
        style="@style/LoginHelloBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_hello_margin_start"
        android:layout_marginTop="@dimen/login_hello_margin_top"
        android:text="@string/login_hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_screen_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_screen_please"
        style="@style/LoginHelloRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_please_margin_top"
        android:text="@string/login_please"
        app:layout_constraintStart_toStartOf="@id/login_screen_hello"
        app:layout_constraintTop_toBottomOf="@id/login_screen_hello" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_email"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="@dimen/edittext_marginstartend"
        android:layout_marginTop="@dimen/edittext_margin_top"
        android:layout_marginEnd="@dimen/edittext_marginstartend"
        android:background="@drawable/edittext_background"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/edittext_padding_start"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_please" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_password"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="@dimen/edittext_marginstartend"
        android:layout_marginTop="@dimen/edittext_password_margin_top"
        android:layout_marginEnd="@dimen/edittext_marginstartend"
        android:background="@drawable/edittext_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="@dimen/edittext_padding_start"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_text_button"
        style="@style/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:background="@android:color/transparent"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>